@@ -1,0 +1,15 @@
+/*
+ * Copyright 2010 AsereBLN. All rights reserved. <aserebln@googlemail.com>
+ *
+ * mem.h
+ */
+
+#ifndef __LIBSAIO_MEM_H
+#define __LIBSAIO_MEM_H
+
+#include "platform.h"
+
+extern void scan_memory(PlatformInfo_t *);
+
+
+#endif	/* __LIBSAIO_MEM_H */
